buah valor n bateu

--- a/Testes_de_Hipotese/shapiro-wilk.ipynb
+++ b/Testes_de_Hipotese/shapiro-wilk.ipynb
@@ -4,14 +4,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Teste de Shapiro-Wilk"
+    "# Teste de Shapiro-Wilk"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Importação de Bibliotecas"
+    "O teste de Shapiro-Wilk considera as seguintes hipóteses"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Importação de Bibliotecas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pip install --upgrade openpyxl"
    ]
   },
   {
@@ -37,8 +53,16 @@
     "import numpy as np\n",
     "import random\n",
     "import statistics\n",
+    "from scipy.stats import norm\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Amostragem"
    ]
   },
   {
@@ -48,81 +72,402 @@
     "*Escolha das amostras*\n",
     "\n",
     "Distribuição Binomial\n",
+    "\n",
     "Distribuição Normal\n",
+    "\n",
     "Distribuição Poisson\n",
+    "\n",
     "Distribuição Lognormal\n",
+    "\n",
     "Amostra aleatória (sem especificação de distribuição)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
-    "n,p = 10, 0.5\n",
-    "#size\n",
-    "np.random.binomial(n,p,size=(2,100))"
+    "# Definir a semente para garantir a reprodutibilidade\n",
+    "seeds = list(range(10))\n",
+    "numeros = list(range(7,19))\n",
+    "\n",
+    "size_amostra = 10\n",
+    "\n",
+    "# Listas para armazenar as amostras geradas\n",
+    "amostras_aleatorias = [] #amostra aleatória simples\n",
+    "amostras_lognormal = []\n",
+    "amostras_binomial = []\n",
+    "amostras_poisson = []\n",
+    "amostras_normal = []\n",
+    "\n",
+    "# Gerar as amostras com seeds diferentes\n",
+    "for seed in seeds:\n",
+    "    random_state = np.random.RandomState(seed)\n",
+    "    amostra_aleatoria = random_state.choice(numeros, size_amostra)  # Amostra aleatória de 10 números\n",
+    "    amostra_lognormal = random_state.lognormal(25, 2, size_amostra)  # Distribuição log-normal com média 0 e desvio padrão 1\n",
+    "    amostra_binomial = random_state.binomial(10, 0.5, size_amostra)  # Distribuição binomial com 10 tentativas e probabilidade de sucesso 0.5\n",
+    "    amostra_poisson = random_state.poisson(2, size_amostra)  # Distribuição de Poisson com lambda = 2\n",
+    "    amostra_normal = random_state.normal(6, 1.5, size_amostra)  # Distribuição normal \n",
+    "    \n",
+    "    amostras_aleatorias.append(amostra_aleatoria)\n",
+    "    amostras_lognormal.append(amostra_lognormal)\n",
+    "    amostras_binomial.append(amostra_binomial)\n",
+    "    amostras_poisson.append(amostra_poisson)\n",
+    "    amostras_normal.append(amostra_normal)\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def transforma_lista_em_dataframe(amostras):\n",
+    "    df = pd.DataFrame(amostras)\n",
+    "    df.columns = ['X_i']\n",
+    "    df = df.sort_values(by='X_i').reset_index(drop=True)\n",
+    "    return df\n",
+    "\n",
+    "df_aleatorias = transforma_lista_em_dataframe(amostras_aleatorias[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>X_i</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "[51, 31, 34, 98, 74, 71, 68, 92, 78, 11]"
+       "   X_i\n",
+       "0    7\n",
+       "1    9\n",
+       "2   10\n",
+       "3   10\n",
+       "4   10\n",
+       "5   12\n",
+       "6   12\n",
+       "7   14\n",
+       "8   16\n",
+       "9   18"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 171,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "random.sample(range(1, 100), 10)"
+    "df_aleatorias"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Calculando Dcalc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Gerar 10 amostras de uma distribuição log-normal\n",
-    "mu_ln, sigma_ln = 0, 1  # Média e desvio padrão do logaritmo\n",
-    "amostras_lognormal = np.random.lognormal(mu_ln, sigma_ln, size=(10, 50))\n"
+    "try:\n",
+    "    coeficient_table = pd.read_excel(open('Shapiro-Wilk-Tables.xlsx','rb'),sheet_name='SW Table',header=4,nrows=24)\n",
+    "except Exception as e:\n",
+    "    print(\"Ocorreu um erro ao ler o arquivo XLSX\",e)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Tratamento de valores NaN\n",
+    "coeficient_table = coeficient_table.fillna(0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$W_{calc}=\\frac{b^2}{\\sum_{i=1}^{n}(X_i-\\overline{X})^2}\\quad para\\quad i=1,...,n\\\\\n",
+    "b= \\sum_{i=1}^{\\frac{n}{2}}a_{i,n}(X_{(n-i-1)}-X_{(i)})$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[3, 3, 3, 2, 2, 0, 2, 2, 1, 2, 3, 1, 1, 3, 1, 1, 1, 1, 1, 0, 1, 2,\n",
-       "        1, 0, 0, 1, 1, 6, 3, 1, 2, 1, 4, 0, 3, 0, 1, 2, 2, 0, 0, 4, 1, 0,\n",
-       "        2, 1, 2, 1, 0, 0, 3, 1, 4, 1, 1, 1, 1, 3, 3, 2, 0, 3, 4, 1, 0, 2,\n",
-       "        0, 1, 4, 3, 0, 2, 1, 2, 1, 1, 0, 2, 1, 1, 1, 0, 1, 3, 3, 1, 0, 0,\n",
-       "        0, 1, 0, 0, 4, 1, 1, 1, 2, 2, 1, 1],\n",
-       "       [0, 2, 3, 2, 4, 2, 2, 2, 1, 0, 2, 1, 0, 1, 0, 3, 3, 2, 1, 1, 1, 0,\n",
-       "        5, 2, 1, 0, 0, 1, 1, 2, 1, 4, 4, 0, 3, 3, 2, 1, 0, 0, 1, 1, 0, 2,\n",
-       "        2, 2, 2, 4, 1, 0, 1, 4, 2, 4, 1, 4, 0, 1, 1, 2, 1, 2, 2, 5, 2, 2,\n",
-       "        1, 2, 2, 2, 0, 0, 0, 0, 0, 0, 0, 1, 1, 4, 3, 3, 4, 0, 2, 2, 1, 3,\n",
-       "        2, 1, 0, 3, 3, 0, 0, 0, 0, 0, 2, 1]])"
+       "0     7\n",
+       "1     9\n",
+       "2    10\n",
+       "3    10\n",
+       "4    10\n",
+       "5    12\n",
+       "6    12\n",
+       "7    14\n",
+       "8    16\n",
+       "9    18\n",
+       "Name: X_i, dtype: int32"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.random.poisson(1.5,size=(2,100))"
+    "df_aleatorias['X_i']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculando b\n",
+    "n = 10\n",
+    "n_sobre_2 = int(n/2)\n",
+    "b = 0\n",
+    "\n",
+    "for i in range(n_sobre_2):\n",
+    "    a = coeficient_table.iloc[i,n-1]\n",
+    "    dif = (df_aleatorias['X_i'][n-i-1] - df_aleatorias['X_i'][i])\n",
+    "    b += a*dif\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9.797600000000001"
+      ]
+     },
+     "execution_count": 177,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13.6"
+      ]
+     },
+     "execution_count": 175,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "media = amostra_aleatoria.mean()\n",
+    "media"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7163654161194031"
+      ]
+     },
+     "execution_count": 180,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numerador = np.power(b,2)\n",
+    "\n",
+    "denominador = sum([(df_aleatorias['X_i'][i] - media)**2 for i in range(len(df_aleatorias))])\n",
+    "\n",
+    "Wcalc = numerador/denominador\n",
+    "\n",
+    "Wcalc\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Valor crítico\n",
+    "n = 10 e a = 1% (0.01)\n",
+    "\n",
+    "Olhando na tabela,\n",
+    "Wc = 0.781"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.716 < 0.781\n",
+      "A hipótese nula é rejeitada, logo os dados não são normais\n"
+     ]
+    }
+   ],
+   "source": [
+    "Wc = 0.781\n",
+    "if Wcalc > Wc:\n",
+    "    print(f\"{Wcalc:.3f} > {Wc:.3f}\")\n",
+    "    print(\"A hipótese nula é aceita, logo os dados são normais\")\n",
+    "else:\n",
+    "    print(f\"{Wcalc:.3f} < {Wc:.3f}\")\n",
+    "    print(\"A hipótese nula é rejeitada, logo os dados não são normais\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Utilizando a biblioteca Stats do Scipy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ShapiroResult(statistic=0.9445412158966064, pvalue=0.6045560836791992)"
+      ]
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from scipy import stats\n",
+    "\n",
+    "in_order = sorted(amostra_aleatoria)\n",
+    "\n",
+    "res = stats.shapiro(in_order)\n",
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[8, 11, 12, 13, 13, 13, 15, 15, 18, 18]"
+      ]
+     },
+     "execution_count": 152,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "in_order"
    ]
   }
  ],
