deu um valor mais proximo mas ainda ta longe

--- a/Testes_de_Hipotese/shapiro-wilk.ipynb
+++ b/Testes_de_Hipotese/shapiro-wilk.ipynb
@@ -32,22 +32,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 188,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\dorie\\anaconda3\\lib\\site-packages\\pandas\\core\\computation\\expressions.py:21: UserWarning: Pandas requires version '2.8.4' or newer of 'numexpr' (version '2.8.1' currently installed).\n",
-      "  from pandas.core.computation.check import NUMEXPR_INSTALLED\n",
-      "c:\\Users\\dorie\\anaconda3\\lib\\site-packages\\pandas\\core\\arrays\\masked.py:60: UserWarning: Pandas requires version '1.3.6' or newer of 'bottleneck' (version '1.3.4' currently installed).\n",
-      "  from pandas.core import (\n",
-      "c:\\Users\\dorie\\anaconda3\\lib\\site-packages\\scipy\\__init__.py:146: UserWarning: A NumPy version >=1.16.5 and <1.23.0 is required for this version of SciPy (detected version 1.26.4\n",
-      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -84,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +209,7 @@
        "9   18"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 191,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +252,7 @@
    "metadata": {},
    "source": [
     "$W_{calc}=\\frac{b^2}{\\sum_{i=1}^{n}(X_i-\\overline{X})^2}\\quad para\\quad i=1,...,n\\\\\n",
-    "b= \\sum_{i=1}^{\\frac{n}{2}}a_{i,n}(X_{(n-i-1)}-X_{(i)})$"
+    "b= \\sum_{i}^{\\frac{n}{2}}a_{i,n}(X_{(n-i-1)}-X_{(i)})$"
    ]
   },
   {
@@ -300,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,11 +296,128 @@
     "n_sobre_2 = int(n/2)\n",
     "b = 0\n",
     "\n",
-    "for i in range(n_sobre_2):\n",
+    "for i in range(n):\n",
     "    a = coeficient_table.iloc[i,n-1]\n",
-    "    dif = (df_aleatorias['X_i'][n-i-1] - df_aleatorias['X_i'][i])\n",
+    "    dif = (df_aleatorias['X_i'][i])\n",
     "    b += a*dif\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 196,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10.7432"
+      ]
+     },
+     "execution_count": 196,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 187,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>X_i</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   X_i\n",
+       "0    7\n",
+       "1    9\n",
+       "2   10\n",
+       "3   10\n",
+       "4   10\n",
+       "5   12\n",
+       "6   12\n",
+       "7   14\n",
+       "8   16\n",
+       "9   18"
+      ]
+     },
+     "execution_count": 187,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_aleatorias"
    ]
   },
   {
@@ -359,16 +463,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7163654161194031"
+       "0.8613160167164179"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 205,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,15 +500,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.716 < 0.781\n",
-      "A hipótese nula é rejeitada, logo os dados não são normais\n"
+      "0.861 > 0.781\n",
+      "A hipótese nula é aceita, logo os dados são normais\n"
      ]
     }
    ],
@@ -427,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +540,7 @@
        "ShapiroResult(statistic=0.9445412158966064, pvalue=0.6045560836791992)"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 208,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +565,7 @@
        "[8, 11, 12, 13, 13, 13, 15, 15, 18, 18]"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 207,
      "metadata": {},
      "output_type": "execute_result"
     }
