a diferenca eh a partir da 4casa decimal. devo me preocupar?

--- a/Testes_de_Hipotese/shapiro-wilk.ipynb
+++ b/Testes_de_Hipotese/shapiro-wilk.ipynb
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,25 +296,45 @@
     "n_sobre_2 = int(n/2)\n",
     "b = 0\n",
     "\n",
-    "for i in range(n):\n",
+    "for i in range(5):\n",
     "    a = coeficient_table.iloc[i,n-1]\n",
-    "    dif = (df_aleatorias['X_i'][i])\n",
+    "    dif = (df_aleatorias['X_i'][n-i-1]-df_aleatorias['X_i'][i])\n",
     "    b += a*dif\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "10.7432"
+       "array([12,  7, 10, 18, 10, 14, 16, 10, 12,  9])"
       ]
      },
-     "execution_count": 196,
+     "execution_count": 260,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "amostras_aleatorias[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 267,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9.797600000000001"
+      ]
+     },
+     "execution_count": 267,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 257,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +431,7 @@
        "9   18"
       ]
      },
-     "execution_count": 187,
+     "execution_count": 257,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,57 +442,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "9.797600000000001"
+       "11.8"
       ]
      },
-     "execution_count": 177,
+     "execution_count": 261,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "b"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 175,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "13.6"
-      ]
-     },
-     "execution_count": 175,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "media = amostra_aleatoria.mean()\n",
+    "media = amostras_aleatorias[0].mean()\n",
     "media"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8613160167164179"
+       "0.9448126551181103"
       ]
      },
-     "execution_count": 205,
+     "execution_count": 262,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,11 +480,31 @@
    "source": [
     "numerador = np.power(b,2)\n",
     "\n",
-    "denominador = sum([(df_aleatorias['X_i'][i] - media)**2 for i in range(len(df_aleatorias))])\n",
+    "denominador = sum([(amostras_aleatorias[0][i] - media)**2 for i in range(len(df_aleatorias))])\n",
     "\n",
     "Wcalc = numerador/denominador\n",
     "\n",
     "Wcalc\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 253,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "84.4"
+      ]
+     },
+     "execution_count": 253,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "denominador"
    ]
   },
   {
@@ -500,14 +520,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.861 > 0.781\n",
+      "0.9448126551181103 > 0.781\n",
       "A hipótese nula é aceita, logo os dados são normais\n"
      ]
     }
@@ -515,10 +535,10 @@
    "source": [
     "Wc = 0.781\n",
     "if Wcalc > Wc:\n",
-    "    print(f\"{Wcalc:.3f} > {Wc:.3f}\")\n",
+    "    print(f\"{Wcalc} > {Wc:.3f}\")\n",
     "    print(\"A hipótese nula é aceita, logo os dados são normais\")\n",
     "else:\n",
-    "    print(f\"{Wcalc:.3f} < {Wc:.3f}\")\n",
+    "    print(f\"{Wcalc} < {Wc:.3f}\")\n",
     "    print(\"A hipótese nula é rejeitada, logo os dados não são normais\")"
    ]
   },
@@ -531,16 +551,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ShapiroResult(statistic=0.9445412158966064, pvalue=0.6045560836791992)"
+       "ShapiroResult(statistic=0.9446595907211304, pvalue=0.6059240698814392)"
       ]
      },
-     "execution_count": 208,
+     "execution_count": 266,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,30 +568,8 @@
    "source": [
     "from scipy import stats\n",
     "\n",
-    "in_order = sorted(amostra_aleatoria)\n",
-    "\n",
-    "res = stats.shapiro(in_order)\n",
+    "res = stats.shapiro(amostras_aleatorias[0])\n",
     "res"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 207,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[8, 11, 12, 13, 13, 13, 15, 15, 18, 18]"
-      ]
-     },
-     "execution_count": 207,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "in_order"
    ]
   }
  ],
