added changes to shapiro

--- a/Testes_de_Hipotese/shapiro-wilk.ipynb
+++ b/Testes_de_Hipotese/shapiro-wilk.ipynb
@@ -32,9 +32,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\dorie\\anaconda3\\lib\\site-packages\\pandas\\core\\computation\\expressions.py:21: UserWarning: Pandas requires version '2.8.4' or newer of 'numexpr' (version '2.8.1' currently installed).\n",
+      "  from pandas.core.computation.check import NUMEXPR_INSTALLED\n",
+      "c:\\Users\\dorie\\anaconda3\\lib\\site-packages\\pandas\\core\\arrays\\masked.py:60: UserWarning: Pandas requires version '1.3.6' or newer of 'bottleneck' (version '1.3.4' currently installed).\n",
+      "  from pandas.core import (\n",
+      "c:\\Users\\dorie\\anaconda3\\lib\\site-packages\\scipy\\__init__.py:146: UserWarning: A NumPy version >=1.16.5 and <1.23.0 is required for this version of SciPy (detected version 1.26.4\n",
+      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -71,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +222,7 @@
        "9   18"
       ]
      },
-     "execution_count": 191,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,24 +240,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "try:\n",
-    "    coeficient_table = pd.read_excel(open('Shapiro-Wilk-Tables.xlsx','rb'),sheet_name='SW Table',header=4,nrows=24)\n",
-    "except Exception as e:\n",
-    "    print(\"Ocorreu um erro ao ler o arquivo XLSX\",e)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 193,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Tratamento de valores NaN\n",
-    "coeficient_table = coeficient_table.fillna(0)"
+    "coeficient_table = pd.read_csv('Shapiro-Wilk-Tables.csv')\n",
+    "coeficient_table"
    ]
   },
   {
@@ -287,25 +288,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5739\n",
+      "0.3291\n",
+      "0.2141\n",
+      "0.1224\n",
+      "0.0399\n"
+     ]
+    }
+   ],
    "source": [
     "# Calculando b\n",
-    "n = 10\n",
-    "n_sobre_2 = int(n/2)\n",
-    "b = 0\n",
     "\n",
-    "for i in range(5):\n",
-    "    a = coeficient_table.iloc[i,n-1]\n",
-    "    dif = (df_aleatorias['X_i'][n-i-1]-df_aleatorias['X_i'][i])\n",
-    "    b += a*dif\n",
-    "\n"
+    "def calcular_b(n):\n",
+    "    n = 10\n",
+    "    n_sobre_2 = int(n/2)\n",
+    "    b = 0\n",
+    "\n",
+    "    for i in range(n_sobre_2):\n",
+    "        a = coeficient_table.iloc[i,n-1]\n",
+    "        dif = (df_aleatorias['X_i'][n-i-1]-df_aleatorias['X_i'][i])\n",
+    "        b += a*dif\n",
+    "    return b\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 276,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +329,7 @@
        "array([12,  7, 10, 18, 10, 14, 16, 10, 12,  9])"
       ]
      },
-     "execution_count": 260,
+     "execution_count": 276,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,8 +339,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "X_i = 7 #o primeiro menor valor #valores ordenados\n",
+    "\n",
+    "X_(i) = 12 #primeiro valor da amostra"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 275,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +358,7 @@
        "9.797600000000001"
       ]
      },
-     "execution_count": 267,
+     "execution_count": 275,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,104 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>X_i</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>18</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   X_i\n",
-       "0    7\n",
-       "1    9\n",
-       "2   10\n",
-       "3   10\n",
-       "4   10\n",
-       "5   12\n",
-       "6   12\n",
-       "7   14\n",
-       "8   16\n",
-       "9   18"
-      ]
-     },
-     "execution_count": 257,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_aleatorias"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 277,
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +378,7 @@
        "11.8"
       ]
      },
-     "execution_count": 261,
+     "execution_count": 277,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 286,
    "metadata": {},
    "outputs": [
     {
@@ -472,39 +399,21 @@
        "0.9448126551181103"
       ]
      },
-     "execution_count": 262,
+     "execution_count": 286,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "numerador = np.power(b,2)\n",
+    "def Wcalc(b,amostra, df_amostra):\n",
     "\n",
-    "denominador = sum([(amostras_aleatorias[0][i] - media)**2 for i in range(len(df_aleatorias))])\n",
+    "    numerador = np.power(b,2)\n",
     "\n",
-    "Wcalc = numerador/denominador\n",
+    "    denominador = sum([(amostra[i] - media)**2 for i in range(len(df_aleatorias))])\n",
     "\n",
-    "Wcalc\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 253,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "84.4"
-      ]
-     },
-     "execution_count": 253,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "denominador"
+    "    Wcalc = numerador/denominador\n",
+    "\n",
+    "    return Wcalc\n"
    ]
   },
   {
@@ -533,13 +442,16 @@
     }
    ],
    "source": [
-    "Wc = 0.781\n",
-    "if Wcalc > Wc:\n",
-    "    print(f\"{Wcalc} > {Wc:.3f}\")\n",
-    "    print(\"A hipótese nula é aceita, logo os dados são normais\")\n",
-    "else:\n",
-    "    print(f\"{Wcalc} < {Wc:.3f}\")\n",
-    "    print(\"A hipótese nula é rejeitada, logo os dados não são normais\")"
+    "Wc = 0.781 # esse valor serve para todos os testes com todas as amostras\n",
+    "\n",
+    "\n",
+    "def verificar_hipotese(Wcalc,Wc):\n",
+    "    if Wcalc > Wc:\n",
+    "        print(f\"{Wcalc} > {Wc:.3f}\")\n",
+    "        print(\"A hipótese nula é aceita, logo os dados são normais\")\n",
+    "    else:\n",
+    "        print(f\"{Wcalc} < {Wc:.3f}\")\n",
+    "        print(\"A hipótese nula é rejeitada, logo os dados não são normais\")"
    ]
   },
   {
@@ -551,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 294,
    "metadata": {},
    "outputs": [
     {
@@ -560,7 +472,7 @@
        "ShapiroResult(statistic=0.9446595907211304, pvalue=0.6059240698814392)"
       ]
      },
-     "execution_count": 266,
+     "execution_count": 294,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -568,8 +480,38 @@
    "source": [
     "from scipy import stats\n",
     "\n",
-    "res = stats.shapiro(amostras_aleatorias[0])\n",
-    "res"
+    "\n",
+    "def funcao_shapiro(amostra):\n",
+    "    res = stats.shapiro(amostra)\n",
+    "    return res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valor estatístico de teste (W): 0.9446595907211304\n",
+      "Valor p (p-valor): 0.6059240698814392\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import shapiro\n",
+    "\n",
+    "# Amostra de dados\n",
+    "amostra = [12, 7, 10, 18, 10, 14, 16, 10, 12, 9]\n",
+    "\n",
+    "# Teste de Shapiro-Wilk\n",
+    "stat_teste, p_valor = shapiro(amostra)\n",
+    "\n",
+    "# Imprime o valor estatístico de teste e o valor p\n",
+    "print(\"Valor estatístico de teste (W):\", stat_teste)\n",
+    "print(\"Valor p (p-valor):\", p_valor)\n"
    ]
   }
  ],
