--- a/Testes_de_Hipotese/shapiro-wilk.ipynb
+++ b/Testes_de_Hipotese/shapiro-wilk.ipynb
@@ -121,22 +121,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def transforma_lista_em_dataframe(amostras):\n",
-    "    df = pd.DataFrame(amostras)\n",
+    "def transforma_lista_em_dataframe(amostra):\n",
+    "    df = pd.DataFrame(amostra)\n",
     "    df.columns = ['X_i']\n",
     "    df = df.sort_values(by='X_i').reset_index(drop=True)\n",
-    "    return df\n",
-    "\n",
-    "df_aleatorias = transforma_lista_em_dataframe(amostras_aleatorias[0])"
+    "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([12,  7, 10, 18, 10, 14, 16, 10, 12,  9])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "lista = [amostras_aleatorias, amostras_lognormal, amostras_binomial, amostras_poisson, amostras_normal]\n",
+    "lista[0][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +187,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>7</td>\n",
+       "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -174,31 +195,31 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>10</td>\n",
+       "      <td>9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>10</td>\n",
+       "      <td>13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
        "      <td>14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>16</td>\n",
+       "      <td>18</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -210,25 +231,27 @@
       ],
       "text/plain": [
        "   X_i\n",
-       "0    7\n",
+       "0    8\n",
        "1    9\n",
-       "2   10\n",
-       "3   10\n",
-       "4   10\n",
-       "5   12\n",
-       "6   12\n",
-       "7   14\n",
-       "8   16\n",
+       "2    9\n",
+       "3   13\n",
+       "4   14\n",
+       "5   15\n",
+       "6   15\n",
+       "7   15\n",
+       "8   18\n",
        "9   18"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_aleatorias"
+    "amostra_da_vez = lista[0][2]\n",
+    "df = transforma_lista_em_dataframe(amostra_da_vez)\n",
+    "df"
    ]
   },
   {
@@ -258,32 +281,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0     7\n",
+       "0     8\n",
        "1     9\n",
-       "2    10\n",
-       "3    10\n",
-       "4    10\n",
-       "5    12\n",
-       "6    12\n",
-       "7    14\n",
-       "8    16\n",
+       "2     9\n",
+       "3    13\n",
+       "4    14\n",
+       "5    15\n",
+       "6    15\n",
+       "7    15\n",
+       "8    18\n",
        "9    18\n",
        "Name: X_i, dtype: int32"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_aleatorias['X_i']"
+    "df['X_i']"
    ]
   },
   {
@@ -306,14 +329,14 @@
    "source": [
     "# Calculando b\n",
     "\n",
-    "def calcular_b(n):\n",
+    "def calcular_b(n,df):\n",
     "    n = 10\n",
     "    n_sobre_2 = int(n/2)\n",
     "    b = 0\n",
     "\n",
     "    for i in range(n_sobre_2):\n",
     "        a = coeficient_table.iloc[i,n-1]\n",
-    "        dif = (df_aleatorias['X_i'][n-i-1]-df_aleatorias['X_i'][i])\n",
+    "        dif = (df['X_i'][n-i-1]-df['X_i'][i])\n",
     "        b += a*dif\n",
     "    return b\n"
    ]
@@ -405,15 +428,26 @@
     }
    ],
    "source": [
-    "def Wcalc(b,amostra, df_amostra):\n",
+    "def Wcalc(b,amostra, df):\n",
     "\n",
     "    numerador = np.power(b,2)\n",
     "\n",
-    "    denominador = sum([(amostra[i] - media)**2 for i in range(len(df_aleatorias))])\n",
+    "    denominador = sum([(amostra[i] - media)**2 for i in range(len(df))])\n",
     "\n",
     "    Wcalc = numerador/denominador\n",
     "\n",
     "    return Wcalc\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Qual a diferença de amostra e df_amostra\n",
+    "\n",
+    "ex: amostra = [12,  7, 10, 18, 10, 14, 16, 10, 12,  9]\n",
+    "\n",
+    "no df vai ta em ordem: 7 9 10 10 10 12 12 14 16 18"
    ]
   },
   {
