--- a/Testes_de_Hipotese/CT_excel_to_csv.ipynb
+++ b/Testes_de_Hipotese/CT_excel_to_csv.ipynb
@@ -6,6 +6,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "pip install --upgrade openpyxl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import pandas as pd"
    ]
   },
